--- a/styleTemp.css
+++ b/styleTemp.css
@@ -1,4 +1,4 @@
-var c=document.getElementById('myCanvas');
-var ctx=c.getContext('2d');
-ctx.fillStyle='#FF0000';
-ctx.fillRect(0,0,80,100);
+var c=document.getElementById('firstBox');
+						var ctx=c.getContext('2d');
+						ctx.fillStyle='#FF0000';
+						ctx.fillRect(0,0,80,100);
