--- a/styleTemp.css
+++ b/styleTemp.css
@@ -1,4 +1,1 @@
-var c=document.getElementById('firstBox');
-						var ctx=c.getContext('2d');
-						ctx.fillStyle='#FF0000';
-						ctx.fillRect(0,0,80,100);
+body {background-color: #d0e4fe;}
