--- a/Scripts/css/index.css
+++ b/Scripts/css/index.css
@@ -1,14 +1,50 @@
 body{
 	background-color: #414A4C;
+	margin: 0;
+    overflow: auto;
+}
+  
+.span {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	right: 0px;
+	left: 0px;
 }
 
-div {
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
+nav li a{
+	position: absolute;
+	top: 0;
+	left: 0;
+    width: 2px;
 }
-.center{
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-  }
+
+nav ul {
+   padding:0;
+    margin:0;
+    list-style-type: none;
+}
+
+nav > a {
+	background: linear-gradient(hsla(0, 100%, 50%, 1), hsla(0, 100%, 43%, 1) 50%, hsla(0, 100%, 37%, 1) 50%, hsla(0, 100%, 30%, 1)) repeat scroll 0 0 rgba(0, 0, 0, 0);
+    border: 3px solid #fff;
+    border-radius: 40px;
+    bottom: 0px;
+    box-shadow: 0 0 2px hsla(0, 0%, 0%, 0.6);
+    color: #fff;
+    height: 40px;
+    width: 40px;
+    top: 0;
+    left: 0;
+	font-size: 38px;
+    font-weight: bold;
+    line-height: 30px;
+    position: absolute;
+    text-align: center;
+    z-index: 2;
+}
+nav li {
+    left: 0px;
+    position: absolute;
+    top: 0px;
+}
