--- a/Scripts/css/index.css
+++ b/Scripts/css/index.css
@@ -1,6 +1,7 @@
 body {
     margin: 0;
     overflow: auto;
+     
 }
 
 .span {
@@ -32,7 +33,7 @@ body {
 
 .sprite {
 	display: run-in;
-	height: 54px;
-	width: 54px;
+	height: 17.5%;
+	width: height;
 	position: fixed;
 }
