--- a/Scripts/css/default.css
+++ b/Scripts/css/default.css
@@ -289,7 +289,7 @@
 	{
 		position: relative;
 		padding: 5em 0em 7em 0em;
-		background: #111111 url(../../Img/header-bg.png) no-repeat center;
+		background: #111111 url(../../Images/header-bg.png) no-repeat center;
 		background-size: cover;
 	}
 
@@ -466,7 +466,7 @@
 	{
 		position: relative;
 		padding: 7em 0em 7em 0em;
-		background: #111111 url(Img/header-bg.png) no-repeat center;
+		background: #111111 url(../../Images/header-bg.png) no-repeat center;
 		background-size: cover;
 		text-align: center;
 	}
@@ -514,3 +514,8 @@
 		color: rgba(0,0,0,.5);
 	}
 
+	#raph-canvas {
+		text-align: center;
+	}
+	
+	
