--- a/Scripts/css/default.css
+++ b/Scripts/css/default.css
@@ -2,7 +2,7 @@
 	{
 		height: 100%;
 	}
-	
+
 	body
 	{
 		margin: 0px;
@@ -13,51 +13,51 @@
 		font-weight: 200;
 		color: #FFF;
 	}
-	
-	
+
+
 	h1, h2, h3
 	{
 		margin: 0;
 		padding: 0;
 	}
-	
+
 	p, ol, ul
 	{
 		margin-top: 0;
 	}
-	
+
 	ol, ul
 	{
 		padding: 0;
 		list-style: none;
 	}
-	
+
 	p
 	{
 		line-height: 180%;
 	}
-	
+
 	strong
 	{
 	}
-	
+
 	a
 	{
 		color: #ee0000;
 	}
-	
+
 	a:hover
 	{
 		text-decoration: none;
 	}
-	
+
 	.container
 	{
 		overflow: hidden;
 		margin: 0em auto;
 		width: 1200px;
 	}
-	
+
 /*********************************************************************************/
 /* Image Style                                                                   */
 /*********************************************************************************/
@@ -66,32 +66,32 @@
 	{
 		display: inline-block;
 	}
-	
+
 	.image img
 	{
 		display: block;
 		width: 100%;
 	}
-	
+
 	.image-full
 	{
 		display: block;
 		width: 100%;
 		margin: 0 0 2em 0;
 	}
-	
+
 	.image-left
 	{
 		float: left;
 		margin: 0 2em 2em 0;
 	}
-	
+
 	.image-centered
 	{
 		display: block;
 		margin: 0 0 2em 0;
 	}
-	
+
 	.image-centered img
 	{
 		margin: 0 auto;
@@ -117,26 +117,26 @@
 		padding: 2em 0em 0em 0em;
 		list-style: none;
 	}
-	
+
 	ul.contact li
 	{
 		display: inline-block;
 		padding: 0em 0.30em;
 		font-size: 1em;
 	}
-	
+
 	ul.contact li span
 	{
 		display: none;
 		margin: 0;
 		padding: 0;
 	}
-	
+
 	ul.contact li a
 	{
 		color: #FFF;
 	}
-	
+
 	ul.contact li a:before
 	{
 		display: inline-block;
@@ -148,7 +148,7 @@
 		text-align: center;
 		color: #FFFFFF;
 	}
-	
+
 	ul.contact li a.icon-twitter:before { background: #2DAAE4; }
 	ul.contact li a.icon-facebook:before { background: #39599F; }
 	ul.contact li a.icon-dribbble:before { background: #C4376B;	}
@@ -173,14 +173,14 @@
 		font-size: 1em;
 		color: #FFF;
 	}
-	
+
 	.button-alt
 	{
 		padding: 1em 2em;
 		border-color: rgba(0,0,0,.8);
 		color: rgba(0,0,0,.8);
 	}
-		
+
 /*********************************************************************************/
 /* 4-column                                                                      */
 /*********************************************************************************/
@@ -192,20 +192,20 @@
 	{
 		width: 235px;
 	}
-	
+
 	.box1,
 	.box2,
-	.box3,
+	.box3
 	{
 		float: left;
 		margin-right: 20px;
 	}
-	
+
 	.box4
 	{
 		float: right;
 	}
-	
+
 /*********************************************************************************/
 /* 3-column                                                                      */
 /*********************************************************************************/
@@ -223,7 +223,7 @@
 		float: left;
 		margin-right: 20px;
 	}
-	
+
 	.boxC
 	{
 		float: right;
@@ -238,7 +238,7 @@
 	{
 		width: 575px;
 	}
-	
+
 	.tbox1
 	{
 		float: left;
@@ -249,7 +249,7 @@
 		float: right;
 	}
 
-	
+
 /*********************************************************************************/
 /* Heading Titles                                                                */
 /*********************************************************************************/
@@ -258,12 +258,12 @@
 	{
 		margin-bottom: 3em;
 	}
-	
+
 	.title h2
 	{
 		font-size: 2.7em;
 	}
-	
+
 	.title .byline
 	{
 		font-size: 1.3em;
@@ -309,20 +309,43 @@
 		top: 3.6em;
 		left: 0;
 	}
-	
+
 	#logo h1
 	{
 		font-size: 2.6em;
 		color: #79C255;
 	}
-	
+
 	#logo a
 	{
 		text-decoration: none;
 		color: rgba(255,255,255,1);
 	}
 
-/*********************************************************************************/
+
+	/*********************************************************************************/
+	/* Logo                                                                          */
+	/*********************************************************************************/
+
+	#thanks
+	{
+	    text-align: center;
+	    }
+
+	#thanks h1
+	{
+	    font-size: 2.7em;
+	    color: #5e789c;
+	}
+
+	#thanks a
+	{
+	    text-decoration: none;
+	    color: rgba(255,255,255,1);
+	}
+
+
+	/*********************************************************************************/
 /* Menu                                                                          */
 /*********************************************************************************/
 
@@ -332,19 +355,19 @@
 		top: 4.5em;
 		right: 0;
 	}
-	
+
 	#menu ul
 	{
 		display: inline-block;
 	}
-	
+
 	#menu li
 	{
 		display: block;
 		float: left;
 		text-align: center;
 	}
-	
+
 	#menu li a, #menu li span
 	{
 		padding: 1em 1.5em;
@@ -354,18 +377,18 @@
 		font-size: 0.8em;
 		color: rgba(255,255,255,0.80);
 	}
-	
+
 	#menu li:hover a, #menu li.active a, #menu li.active span
 	{
 	}
-	
+
 	#menu .active a
 	{
 		border: 2px solid rgba(255,255,255,1);
 		border-radius: 6px;
 		color: rgba(255,255,255,1);
 	}
-	
+
 	#menu .icon
 	{
 	}
@@ -379,17 +402,17 @@
 		padding-top: 10em;
 		text-align: center;
 	}
-	
+
 	#banner .title h2
 	{
 		font-size: 4em;
 	}
-	
+
 	#banner .title .byline
 	{
 		font-size: 2em;
 	}
-	
+
 	#banner .button
 	{
 		margin-top: 2em;
@@ -398,7 +421,7 @@
 		border-radius: 6px;
 		font-weight: 700;
 		font-size: 1em;
-		
+
 	}
 
 /*********************************************************************************/
@@ -443,14 +466,14 @@
 		padding: 5em 0em;
 		border-top: 1px solid rgba(0,0,0,0.08);
 	}
-	
+
 	#copyright p
 	{
 		text-align: center;
 		font-size: 1em;
 		color: rgba(255,255,255,0.3);
 	}
-	
+
 	#copyright a
 	{
 		text-decoration: none;
@@ -470,14 +493,14 @@
 		background-size: cover;
 		text-align: center;
 	}
-	
+
 	#welcome .container
 	{
 		width: 1000px;
 		padding: 0px 100px;
 		color: rgba(255,255,255,0.8);
 	}
-	
+
 	#welcome a
 	{
 		color: rgba(255,255,255,1);
@@ -501,7 +524,7 @@
 		color: rgba(0,0,0,1);
 		font-size: 2em;
 	}
-	
+
 	#three-column .title h2
 	{
 		font-weight: bold;
@@ -517,5 +540,4 @@
 	#raph-canvas {
 		text-align: center;
 	}
-	
-	
+
