--- a/Scripts/css/index.css
+++ b/Scripts/css/index.css
@@ -45,3 +45,89 @@ body:hover{
 .greeting{
   margin-left: 0.9em;
 }
+
+
+.contact {
+
+//  z-index: 9;
+
+  text-align: center;
+
+	width: 45px;
+
+	height: 45px;
+
+  border-radius: 18%;
+
+  margin: 0 auto;
+
+  color: white;
+
+  font-size: 1.8em;
+
+  cursor: pointer;
+
+	position: fixed;
+
+  right: 1.8vw;
+
+	@include transition(transform 0.6s ease);
+
+
+	&.clicked {
+		-webkit-transform: rotate(360deg);
+		-moz-transform: rotate(360deg);
+		-o-transform: rotate(360deg);
+		-ms-transform: rotate(360deg);
+	}
+
+	&.rotate {
+		-webkit-transform: rotate(180deg);
+		-moz-transform: rotate(180deg);
+		-o-transform: rotate(180deg);
+		-ms-transform: rotate(3180deg);
+	}
+
+	span {
+		position: relative;
+		bottom: 1px;
+	}
+
+  transition-duration:          .45s;
+  -moz-transition-duration:     .45s;
+  -webkit-transition-duration:  .45s;
+  -o-transition-duration:       .45s;
+}
+
+.contact:hover {
+	background: rgba(32, 184, 88, 0.72);
+
+}
+
+.contact:active{
+  background: rgba(0,0,0, 0.99);
+}
+
+
+.linkedin{
+  background: rgb(0, 93, 170);;
+
+	bottom: 54vh;
+}
+
+.facebook{
+  background: rgb(44, 129, 226);
+
+	bottom: 45vh;
+}
+
+.twitter {
+  background: rgb(97, 171, 255);;
+
+	bottom: 36vh;
+}
+
+
+.fa {
+  margin-top: 9px;
+}
